force-app/main/default/objects/Time_Block__c/Time_Block__c.object-meta.xml
<CustomObject>
    <description>Represents a block of time in which classes are held.</description>
    <label>Time Block</label>
    <nameField>
        <label>Time Block Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>