force-app/main/default/objects/Time_Block__c/fields/Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Educational Institution associated with this Time Block. For example, a school within a district.</description>
    <inlineHelpText>The Educational Institution associated with this Time Block. For example, a school within a district.</inlineHelpText>
    <label>Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time Blocks</relationshipLabel>
    <relationshipName>Time_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>