force-app/main/default/objects/Time_Block__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The time of day the Time Block ends.</description>
    <inlineHelpText>The time of day the Time Block ends.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>