force-app/main/default/objects/Time_Block__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The time of day the Time Block starts.</description>
    <inlineHelpText>The time of day the Time Block starts.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>